tests/fixtures/invalid/set_bitor_str.py
# Cannot bitwise OR Set[int] and Str
x: set[int] = {1, 2, 3} | "hello"
